Add machine translation

--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -289,13 +289,15 @@ msgstr "コマンドモードアプリケーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:137
+#, fuzzy
 msgid "Command Mode applications can be tested using the `@QuarkusMainTest` and `@QuarkusMainIntegrationTest` annotations. These work in a similar way to `@QuarkusTest` and `@QuarkusIntegrationTest` where `@QuarkusMainTest` will run the CLI tests within the current JVM, while `QuarkusIntegrationTest` is used to run the generated executable (both jars and native)."
-msgstr ""
+msgstr "コマンドモード・アプリケーションは、 `@QuarkusMainTest` および `@QuarkusMainIntegrationTest` のアノテーションを使用してテストすることができます。これらは、 `@QuarkusTest` および `@QuarkusIntegrationTest` と同様の方法で動作します。 `@QuarkusMainTest` は現在のJVM内でCLIテストを実行し、 `QuarkusIntegrationTest` は生成された実行ファイル（ジャーおよびネイティブの両方）を実行するために使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:139
+#, fuzzy
 msgid "We can write a simple test for our CLI application above as follows:"
-msgstr ""
+msgstr "上記のCLIアプリケーションの簡単なテストを以下のように書くことができます。"
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:148
@@ -353,8 +355,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:174
+#, fuzzy
 msgid "We can then extend this with an integration test that can be used to test the native executable or runnable jar:"
-msgstr ""
+msgstr "そして、これを統合テストで拡張し、ネイティブの実行ファイルや実行可能なjarをテストするために使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/command-mode-reference.adoc:178
