--- a/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
@@ -538,19 +538,21 @@ msgstr "注入されたすべてのクライアントの期限を設定します
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:256
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "gRPC Headers"
-msgstr ""
+msgstr "gRPC ヘッダー"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:259
+#, fuzzy
 msgid "Similarly to HTTP, alongside the message, gRPC calls can carry headers.  Headers can be useful e.g. for authentication."
-msgstr ""
+msgstr "HTTPと同様に、gRPCコールには、メッセージの他にヘッダーを付けることができます。ヘッダーは、認証などに役立ちます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:261
+#, fuzzy
 msgid "To set headers for a gRPC call, create a client with headers attached and then perform the call on this client:"
-msgstr ""
+msgstr "gRPCコールにヘッダを設定するには、ヘッダを添付したクライアントを作成し、このクライアントでコールを実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:264
@@ -609,18 +611,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:291
+#, fuzzy
 msgid "Alter the client to make calls with the `extraHeaders` attached"
-msgstr ""
+msgstr "`extraHeaders` を付けたまま通話ができるようにクライアントを変更します。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:292
+#, fuzzy
 msgid "Perform the call with the altered client. The original client remains unmodified"
-msgstr ""
+msgstr "変更したクライアントで通話を行います。オリジナルのクライアントは変更されないまま"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:294
+#, fuzzy
 msgid "`GrpcClientUtils` work with all flavors of clients."
-msgstr ""
+msgstr "`GrpcClientUtils` は、あらゆる種類のクライアントに対応しています。"
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:295
