--- a/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
@@ -515,8 +515,9 @@ msgstr "サーバーインターセプター"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:247
+#, fuzzy
 msgid "gRPC server interceptors let you perform logic, such as authentication, before your service is invoked."
-msgstr ""
+msgstr "gRPCサーバーのインターセプターでは、サービスが呼び出される前に、認証などのロジックを実行することができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:249
@@ -553,8 +554,9 @@ msgstr "link:https://grpc.github.io/grpc-java/javadoc/io/grpc/ServerInterceptor.
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:268
+#, fuzzy
 msgid "To apply an interceptor to all exposed services, annotate it with `@io.quarkus.grpc.GlobalInterceptor`.  To apply an interceptor to a single service, register it on the service with `@io.quarkus.grpc.RegisterInterceptor`:"
-msgstr ""
+msgstr "公開されているすべてのサービスにインターセプターを適用するには、 `@io.quarkus.grpc.GlobalInterceptor` でアノテーションを付けます。インターセプターを単一のサービスに適用するには、 `@io.quarkus.grpc.RegisterInterceptor` でそのサービスに登録します。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-implementation.adoc:272
