--- a/l10n/po/ja_JP/_guides/kubernetes-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-config.adoc.po
@@ -93,13 +93,15 @@ msgstr "ConfigMapsとSecretsは、 `application.properties` 、 `application.yam
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:44
+#, fuzzy
 msgid "The extension is disabled by default in order to prevent the application for making API calls when it is not running in a Kubernetes environment. To enable it, set `quarkus.kubernetes-config.enabled=true` (for example using a specific xref:config-reference.adoc#profiles[profile])."
-msgstr ""
+msgstr "この拡張機能は、アプリケーションがKubernetes環境で実行されていないときにAPIコールを行うことを防ぐため、デフォルトでは無効になっています。有効にするには、 `quarkus.kubernetes-config.enabled=true` を設定してください（特定の link:config-reference.html#profiles[プロファイル]を使用するなど）。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:47
+#, fuzzy
 msgid "The values of `quarkus.kubernetes-config.config-maps` and `quarkus.kubernetes-config.secrets` determine which ConfigMaps and/or Secrets will be used as configuration sources. Keep in mind that these ConfigMaps and Secrets must be in the same Kubernetes `Namespace` as the running application. If they are to be found in a different namespace, then `quarkus.kubernetes-config.namespace` must be set to the proper value."
-msgstr ""
+msgstr "`quarkus.kubernetes-config.config-maps` と `quarkus.kubernetes-config.secrets` の値は、どの ConfigMaps および/または Secrets を設定ソースとして使用するかを決定します。これらのConfigMapsとSecretsは、実行中のアプリケーションと同じKubernetes `Namespace` にある必要があることに留意してください。もしそれらが異なる名前空間にある場合は、 `quarkus.kubernetes-config.namespace` を適切な値に設定する必要があります。"
 
 #. type: Title ===
 #: upstream/_guides/kubernetes-config.adoc:48
@@ -158,33 +160,39 @@ msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:71
+#, fuzzy
 msgid "A very common use case is to deploy a Quarkus application that needs to access a relational database which has itself already been deployed on Kubernetes. Using the `quarkus-kubernetes-config` extension makes this use case very simple to handle."
-msgstr ""
+msgstr "非常に一般的なユースケースは、それ自体がすでにKubernetesにデプロイされているリレーショナルデータベースにアクセスする必要があるQuarkusアプリケーションをデプロイすることです。 `quarkus-kubernetes-config` エクステンションを使用することで、このユースケースを非常に簡単に扱うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:73
+#, fuzzy
 msgid "Let's assume that our Quarkus application needs to talk to PostgreSQL and that when PostgreSQL was deployed on our Kubernetes cluster, a `Secret` named `postgresql` was created as part of that deployment and contains the following entries:"
-msgstr ""
+msgstr "ここでは、QuarkusアプリケーションがPostgreSQLと通信する必要があり、PostgreSQLがKubernetesクラスタに展開されたときに、その展開の一部として `postgresql` という名前の `Secret` が作成され、以下のエントリが含まれていたと仮定します。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:75
+#, fuzzy
 msgid "`database-name`"
-msgstr ""
+msgstr "`database-name`"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:76
+#, fuzzy
 msgid "`database-user`"
-msgstr ""
+msgstr "`database-user`"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:77
+#, fuzzy
 msgid "`database-password`"
-msgstr ""
+msgstr "`database-password`"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:79
+#, fuzzy
 msgid "One possible way to make Quarkus use these entries to connect the database is to use the following configuration:"
-msgstr ""
+msgstr "Quarkusがこれらのエントリーを使用してデータベースに接続する方法としては、以下のような設定が考えられます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-config.adoc:84
@@ -205,49 +213,57 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:90
+#, fuzzy
 msgid "Enable reading of secrets. Note the use of `%prod` profile as we only want this setting applied when the application is running in production."
-msgstr ""
+msgstr "シークレットの読み取りを有効にします。アプリケーションが本番稼動しているときにのみこの設定を適用するため、 `%prod` プロファイルを使用していることに注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:91
+#, fuzzy
 msgid "Configure the name of the secret that will be used. This doesn't need to be prefixed with the `%prod` profile as it won't have any effect if secret reading is disabled."
-msgstr ""
+msgstr "使用されるシークレットの名前を設定します。秘密の読み取りが無効になっている場合は何の効果もありませんので、この名前の前に `%prod` プロファイルを付ける必要はありません。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:92
+#, fuzzy
 msgid "Quarkus will substitute `${database-name}` with the value obtained from the entry with name `database-name` of the `postgres` Secret. `somehost` is the name of the Kubernetes `Service` that was created when PostgreSQL was deployed to Kubernetes."
-msgstr ""
+msgstr "Quarkusは、 `${database-name}` を `postgres` Secret の `database-name` という名前のエントリから取得した値で置き換えます。 `somehost` は、PostgreSQL を Kubernetes にデプロイした際に作成された Kubernetes の `Service` の名前です。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:93
+#, fuzzy
 msgid "Quarkus will substitute `${database-user}` with the value obtained from the entry with name `database-user` of the `postgres` Secret."
-msgstr ""
+msgstr "Quarkusは、 `${database-user}` を `postgres` Secret の `database-user` という名前のエントリから得た値で置き換えます。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:94
+#, fuzzy
 msgid "Quarkus will substitute `${database-password}` with the value obtained from the entry with name `database-password` of the `postgres` Secret."
-msgstr ""
+msgstr "Quarkusは、 `${database-password}` を `postgres` Secret の `database-password` という名前のエントリから得た値で置き換えます。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:96
+#, fuzzy
 msgid "The values above allow the application to be completely agnostic of the actual database configuration used in production while also not inhibiting the usability of the application at development time."
-msgstr ""
+msgstr "上記の値は、本番環境で使用されている実際のデータベース構成に完全に依存しないようにすると同時に、開発時のアプリケーションの使い勝手を阻害しないようにしています。"
 
 #. type: Title ===
 #: upstream/_guides/kubernetes-config.adoc:97
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Alternatives"
-msgstr ""
+msgstr "オルタナティブ"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:100
+#, fuzzy
 msgid "The use of the `quarkus-kubernetes-config` extensions is completely optional as there are other ways an application can be configured to use ConfigMaps or Secrets."
-msgstr ""
+msgstr "アプリケーションがConfigMapsやSecretsを使用するように設定する方法は他にもあるため、 `quarkus-kubernetes-config` 拡張機能の使用は完全に任意です。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:103
+#, fuzzy
 msgid "One common alternative is to map each entry of the ConfigMap and / Secret to an environment variable on the Kubernetes `Deployment` - see link:https://kubernetes.io/docs/concepts/configuration/secret/#use-case-as-container-environment-variables[this] for more details.  To achieve that in Quarkus, we could use the `quarkus-kubernetes` extension (which is responsible for creating Kubernetes manifests and include the following configuration) and configure it as so:"
-msgstr ""
+msgstr "一般的な代替案としては、ConfigMapと/ Secretの各エントリをKubernetes `Deployment` の環境変数にマッピングする方法があります - 詳細は link:https://kubernetes.io/docs/concepts/configuration/secret/#use-case-as-container-environment-variables[こちら]を参照してください。Quarkusでこれを実現するには、 `quarkus-kubernetes` 拡張機能（Kubernetesマニフェストの作成を担当し、以下の設定を含む）を使用し、以下のように構成します。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-config.adoc:113
@@ -273,8 +289,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:120
+#, fuzzy
 msgid "The end result of the above configuration would be the following `env` part being applied the generated `Deployment`:"
-msgstr ""
+msgstr "上記の構成では、最終的に次のような `env` 部分が、生成された `Deployment` に適用されます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-config.adoc:139
@@ -300,8 +317,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:142
+#, fuzzy
 msgid "See xref:deploying-to-kubernetes.adoc#secret-mapping[this] for more details."
-msgstr ""
+msgstr "詳しくは link:deploying-to-kubernetes.html#secret-mapping[こちら]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-config.adoc:143
