--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -916,8 +916,9 @@ msgstr "カスタムヘッダーのサポート"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:546
+#, fuzzy
 msgid "There are a few ways in which you can specify custom headers for your REST calls:"
-msgstr ""
+msgstr "RESTコールにカスタムヘッダーを指定するにはいくつかの方法があります。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:548
@@ -928,18 +929,21 @@ msgstr "MicroProfile REST クライアントでは、 `ClientHeadersFactory` を
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:549
+#, fuzzy
 msgid "by specifying the value of the header with `@ClientHeaderParam`"
-msgstr ""
+msgstr "でヘッダーの値を指定することで `@ClientHeaderParam`"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:550
+#, fuzzy
 msgid "by specifying the value of the header by `@HeaderParam`"
-msgstr ""
+msgstr "でヘッダーの値を指定することで `@HeaderParam`"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:552
+#, fuzzy
 msgid "The code below demonstrates how to use each of this techniques:"
-msgstr ""
+msgstr "以下のコードでは、それぞれのテクニックの使い方を紹介しています。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:565
@@ -987,28 +991,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:585
+#, fuzzy
 msgid "There can be only one `ClientHeadersFactory` per class. With it, you can not only add custom headers, but you can also transform existing ones. See the `RequestUUIDHeaderFactory` class below for an example of the factory."
-msgstr ""
+msgstr "`ClientHeadersFactory` は、1つのクラスにつき1つだけです。これを使うと、カスタムヘッダーを追加できるだけでなく、既存のヘッダーを変換することもできます。ファクトリーの例として、以下の `RequestUUIDHeaderFactory` クラスをご覧ください。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:586
+#, fuzzy
 msgid "`@ClientHeaderParam` can be used on the client interface and on methods. It can specify a constant header value..."
-msgstr ""
+msgstr "`@ClientHeaderParam` は、クライアントインターフェイスやメソッドで使用できます。定数のヘッダー値を指定することができます..."
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:587
+#, fuzzy
 msgid "... and a name of a method that should compute the value of the header. It can either be a static method or a default method in this interface"
-msgstr ""
+msgstr "<li> <p>と、ヘッダの値を計算するメソッドの名前を指定します。これは、このインターフェースのスタティック・メソッドまたはデフォルト・メソッドのいずれかです。</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:588
+#, fuzzy
 msgid "... as well as a value from your application's configuration"
-msgstr ""
+msgstr "<li> <p>と、アプリケーションの設定値である</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:590
+#, fuzzy
 msgid "A `ClientHeadersFactory` can look as follows:"
-msgstr ""
+msgstr "`ClientHeadersFactory` は以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:596
@@ -1055,8 +1064,9 @@ msgstr "上の例にあるように、 `ClientHeadersFactory` の実装に `@Sin
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:618
+#, fuzzy
 msgid "To specify a value for `${header.value}`, simply put the following in your `application.properties`:"
-msgstr ""
+msgstr "`${header.value}` の値を指定するには、次のように `application.properties` に記述するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:622
