--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -33,8 +33,9 @@ msgstr "Quarkusネイティブの `@ConfigProperties` や MicroProfile `@ConfigP
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:15
+#, fuzzy
 msgid "Spring Boot `@ConfigurationProperties` has a few limitations. For instance, `Map` injection is not supported. Consider using link:config-mappings.adoc[Mapping configuration to objects]."
-msgstr ""
+msgstr "Spring Boot `@ConfigurationProperties` にはいくつかの制限があります。例えば、 `Map` インジェクションはサポートされていません。 link:config-mappings.adoc[Mapping configuration to] objectsの使用を検討してください。"
 
 #. type: Title ==
 #: upstream/_guides/spring-boot-properties.adoc:16
