--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -458,23 +458,27 @@ msgstr "統合テストからコードカバレッジデータを取得するに
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:243
+#, fuzzy
 msgid "The built artifact is a jar (and not a container or native binary)."
-msgstr ""
+msgstr "ビルドされたアーティファクトはjar（コンテナやネイティブバイナリではありません）です。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:244
+#, fuzzy
 msgid "Jacoco needs to be configured in your build tool."
-msgstr ""
+msgstr "Jacocoはビルドツールで設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:245
+#, fuzzy
 msgid "The application must have been built with `quarkus.package.write-transformed-bytecode-to-build-output` set to `true`"
-msgstr ""
+msgstr "アプリケーションは、 `quarkus.package.write-transformed-bytecode-to-build-output` に設定してビルドされている必要があります。 `true`"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:247
+#, fuzzy
 msgid "Setting `quarkus.package.write-transformed-bytecode-to-build-output=true` should be done with a caution and only if subsequent builds are done in a clean environment - i.e. the build tool's output directory has been completely cleaned."
-msgstr ""
+msgstr "`quarkus.package.write-transformed-bytecode-to-build-output=true` の設定は、慎重に行う必要があります。また、後続のビルドがクリーンな環境で行われる場合のみ、つまりビルドツールの出力ディレクトリが完全にクリーンな状態で行われる場合のみ、設定を行う必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:250
