--- a/l10n/po/ja_JP/_guides/context-propagation.adoc.po
+++ b/l10n/po/ja_JP/_guides/context-propagation.adoc.po
@@ -242,247 +242,251 @@ msgstr "注入された `ManagedExecutor` は、Quarkus のスレッドプール
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:159
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Overriding which contexts are propagated"
-msgstr ""
+msgstr "どのコンテキストが伝搬されるかをオーバーライドする"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:162
+#, fuzzy
 msgid "By default, all available contexts are propagated. However, you can override this behaviour in several ways."
-msgstr ""
+msgstr "デフォルトでは、利用可能なすべてのコンテキストが伝搬されます。しかし、この動作をいくつかの方法で上書きすることができます。"
 
 #. type: Title ===
 #: upstream/_guides/context-propagation.adoc:163
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Using configuration"
-msgstr ""
+msgstr "コンフィギュレーションの使用"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:166
+#, fuzzy
 msgid "The following configuration properties allow you to specify the default sets of propagated contexts:"
-msgstr ""
+msgstr "以下の構成プロパティでは、伝搬されるコンテキストのデフォルトセットを指定できます。"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:169
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configuration Key"
-msgstr ""
+msgstr "設定キー"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:169
 #: upstream/_guides/context-propagation.adoc:191
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Description"
-msgstr ""
+msgstr "説明"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:171
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Default Value"
-msgstr ""
+msgstr "デフォルト値"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:172
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`mp.context.ThreadContext.propagated`"
-msgstr ""
+msgstr "`mp.context.ThreadContext.propagated`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:173
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The comma-separated set of propagated contexts"
-msgstr ""
+msgstr "伝播されたコンテクストのコンマで区切られたセット"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:175
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`Remaining` (all non-explicitly list contexts)"
-msgstr ""
+msgstr "`Remaining` (すべての非明示的にリスト化されたコンテクスト)"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:176
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`mp.context.ThreadContext.cleared`"
-msgstr ""
+msgstr "`mp.context.ThreadContext.cleared`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:177
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The comma-separated set of cleared contexts"
-msgstr ""
+msgstr "クリアされたコンテクストのコンマで区切られたセット"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:179
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`None` (no context), unless neither the propagated nor cleared sets contain `Remaining`, in which case the default is `Remaining` (all non-explicitly listed contexts)"
-msgstr ""
+msgstr "`None` （コンテキストなし）。ただし、伝播されたセットとクリアされたセットのどちらにも `Remaining` が含まれていない場合は、デフォルトで `Remaining` （明示されていないすべてのコンテキスト）となる。"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:180
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`mp.context.ThreadContext.unchanged`"
-msgstr ""
+msgstr "`mp.context.ThreadContext.unchanged`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:181
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The comma-separated set of unchanged contexts"
-msgstr ""
+msgstr "変更されていないコンテクストのコンマで区切られたセット"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:182
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`None` (no context)"
-msgstr ""
+msgstr "`None` （文脈なし"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:186
+#, fuzzy
 msgid "The following contexts are available in Quarkus either out of the box, or depending on whether you include their extensions:"
-msgstr ""
+msgstr "以下のコンテクストは、Quarkusですぐに使用できるか、拡張機能を含めるかどうかによって使用できます。"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:189
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Context Nam"
-msgstr ""
+msgstr "コンテキストナム"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:189
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Name Constant"
-msgstr ""
+msgstr "ネームコンスタント"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:192
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`None`"
-msgstr ""
+msgstr "`None`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:193
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#NONE[`ThreadContext.NONE`]"
-msgstr ""
+msgstr "link:https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#NONE[`ThreadContext.NONE`]"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:195
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Can be used to specify an empty set of contexts, but setting the value to empty works too"
-msgstr ""
+msgstr "コンテクストの空のセットを指定するために使用できますが、値を空に設定しても機能します。"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:196
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`Remaining`"
-msgstr ""
+msgstr "`Remaining`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:197
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#ALL_REMAINING[`ThreadContext.ALL_REMAINING`]"
-msgstr ""
+msgstr "link:https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#ALL_REMAINING[`ThreadContext.ALL_REMAINING`]"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:199
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "All the contexts that are not explicitly listed in other sets"
-msgstr ""
+msgstr "他のセットに明示されていないすべてのコンテクスト"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:200
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`Transaction`"
-msgstr ""
+msgstr "`Transaction`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:201
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#TRANSACTION[`ThreadContext.TRANSACTION`]"
-msgstr ""
+msgstr "link:https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#TRANSACTION[`ThreadContext.TRANSACTION`]"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:203
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The JTA transaction context"
-msgstr ""
+msgstr "JTAトランザクションコンテキスト"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:204
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`CDI`"
-msgstr ""
+msgstr "`CDI`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:205
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#CDI[`ThreadContext.CDI`]"
-msgstr ""
+msgstr "link:https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#CDI[`ThreadContext.CDI`]"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:207
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The CDI (ArC) context"
-msgstr ""
+msgstr "CDI(ArC)のコンテキスト"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:208
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`Servlet`"
-msgstr ""
+msgstr "`Servlet`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:209
 #: upstream/_guides/context-propagation.adoc:213
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "N/A"
-msgstr ""
+msgstr "N/A"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:211
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The servlet context"
-msgstr ""
+msgstr "サーブレットコンテキスト"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:212
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`JAX-RS`"
-msgstr ""
+msgstr "`JAX-RS`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:215
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The RESTEasy Classic context"
-msgstr ""
+msgstr "RESTEasy Classic コンテキスト"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:216
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`Application`"
-msgstr ""
+msgstr "`Application`"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:217
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#APPLICATION[`ThreadContext.APPLICATION`]"
-msgstr ""
+msgstr "link:https://javadoc.io/static/org.eclipse.microprofile.context-propagation/microprofile-context-propagation-api/1.2/org/eclipse/microprofile/context/ThreadContext.html#APPLICATION[`ThreadContext.APPLICATION`]"
 
 #. type: Table
 #: upstream/_guides/context-propagation.adoc:218
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The current `ThreadContextClassLoader`"
-msgstr ""
+msgstr "現在の `ThreadContextClassLoader`"
 
 #. type: Title ===
 #: upstream/_guides/context-propagation.adoc:220
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Overriding the propagated contexts using annotations"
-msgstr ""
+msgstr "伝播されたコンテキストをアノテーションで上書きする"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:225
+#, fuzzy
 msgid "In order for automatic context propagation, such as Mutiny uses, to be overridden in specific methods, you can use the https://javadoc.io/doc/io.smallrye/smallrye-context-propagation-api/latest/io/smallrye/context/api/CurrentThreadContext.html[`@CurrentThreadContext`] annotation:"
-msgstr ""
+msgstr "Mutinyが使用しているような自動コンテキスト伝搬を、特定のメソッドでオーバーライドするためには  link:https://javadoc.io/doc/io.smallrye/smallrye-context-propagation-api/latest/io/smallrye/context/api/CurrentThreadContext.html[`@CurrentThreadContext`]アノテーションを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:243
@@ -503,14 +507,15 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/context-propagation.adoc:245
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Overriding the propagated contexts using CDI injection"
-msgstr ""
+msgstr "CDIインジェクションを用いた伝搬されたコンテキストのオーバーライド"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:248
+#, fuzzy
 msgid "You can also inject a custom-built `ThreadContext` using the https://javadoc.io/doc/io.smallrye/smallrye-context-propagation-api/latest/io/smallrye/context/api/ThreadContextConfig.html[`@ThreadContextConfig`] annotation on your injection point:"
-msgstr ""
+msgstr "また、カスタムメイドの `ThreadContext` を注入することもできます。  link:https://javadoc.io/doc/io.smallrye/smallrye-context-propagation-api/latest/io/smallrye/context/api/ThreadContextConfig.html[`@ThreadContextConfig`]アノテーションを使って、インジェクションポイントに"
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:258
