--- a/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
@@ -698,14 +698,15 @@ msgstr "`quarkus-maven-plugin` の代わりに `protobuf-maven-plugin` を利用
 
 #. type: Title ==
 #: upstream/_guides/grpc-getting-started.adoc:393
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "gRPC classes from dependencies"
-msgstr ""
+msgstr "依存関係にあるgRPCクラス"
 
 #. type: Plain text
 #: upstream/_guides/grpc-getting-started.adoc:397
+#, fuzzy
 msgid "When gRPC classes - the classes generated from `proto` files - are in a dependency of the application, then the dependency needs a Jandex index.  The `jandex-maven-plugin` can be used to create a Jandex index. More information on this topic can be found in the link:cdi-reference#bean_discovery[Bean Discovery] section of the CDI guide."
-msgstr ""
+msgstr "gRPCクラス（ `proto` ファイルから生成されたクラス）がアプリケーションの依存関係にある場合、その依存関係にはJandexインデックスが必要です。 `jandex-maven-plugin` は、Jandexインデックスを作成するために使用できます。このトピックの詳細については、CDIガイドの「 link:cdi-reference#bean_discovery[Bean Discovery]」セクションを参照してください。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-getting-started.adoc:417
