--- a/l10n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_guides/neo4j.adoc.po
@@ -396,24 +396,27 @@ msgstr "これでドライバーを使用する準備ができましたが、以
 
 #. type: Title ===
 #: upstream/_guides/neo4j.adoc:181
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:188
+#, fuzzy
 msgid "Quarkus supports a feature called Dev Services that allows you to create various datasources without any config.  In the case of Neo4j this support applies to the single Neo4j driver instance.  Dev Services will bring up a Neo4j container if you didn't explicit add the default values or configured custom values for any of `quarkus.neo4j.uri`, `quarkus.neo4j.authentication.username` or `quarkus.neo4j.authentication.password`.  If Neo4j seems to be reachable via the default properties, Dev Services will also step back."
-msgstr ""
+msgstr "QuarkusはDev Servicesと呼ばれる機能をサポートしており、設定なしで様々なデータソースを作成することができます。Neo4jの場合、このサポートは単一のNeo4jドライバインスタンスに適用されます。Dev Servicesは、明示的にデフォルト値を追加したり、 `quarkus.neo4j.uri` 、 `quarkus.neo4j.authentication.username` 、 `quarkus.neo4j.authentication.password` のいずれかにカスタム値を設定しなかった場合、Neo4jコンテナを立ち上げます。Neo4j が既定のプロパティを介して到達可能であると思われる場合、Dev Services はまた一歩後退します。"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:191
+#, fuzzy
 msgid "Otherwise, Quarkus will automatically start a Neo4j container when running tests or dev-mode, and automatically configure the connection."
-msgstr ""
+msgstr "そうしないと、Quarkusはテストやdev-modeの実行時に自動的にNeo4jコンテナを起動し、自動的に接続を設定します。"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:195
+#, fuzzy
 msgid "When running the production version of the application, the Neo4j connection need to be configured as normal, so if you want to include a production database config in your `application.properties` and continue to use Dev Services we recommend that you use the `%prod.` profile to define your Neo4j settings."
-msgstr ""
+msgstr "本番環境のアプリケーションを実行する際には、Neo4jの接続を通常通りに設定する必要があります。そのため、本番環境のデータベースの設定を `application.properties` に含め、Dev Servicesを継続して使用したい場合には、 `%prod.` プロファイルを使用してNeo4jの設定を定義することをお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/neo4j.adoc:198
